fix: skipped overflow:auto in contenitore-video, otherwise the scroll bar always appears

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a:visited {
     flex-wrap: wrap;
     gap: 3px;
 
-    overflow-y: auto;
+    /* overflow: auto; */
 
     position: absolute;
     top: 8%;
@@ -128,7 +128,7 @@ a:visited {
 }
 
 .icone {
-    font-size: 1.6em;
+    font-size: 1.4em;
 }
 
 .icone.special {
